--- a/src/main/webapp/WEB-INF/views/home.html
+++ b/src/main/webapp/WEB-INF/views/home.html
@@ -4,14 +4,39 @@
 	
 <head th:fragment="header">
     <meta charset="utf-8" />
-	<link type="text/css" rel="stylesheet" href="/resources/css/style.css"/>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<title data-th-text="#{strategy.list.page.title}">Title</title>
+	
+	<!-- Bootstrap -->
+	<link type="text/css" rel="stylesheet" data-th-href="@{/webjars/bootstrap/3.2.0/css/bootstrap.min.css}" />
+	
+	
+	
+	
 	<title th:text="#{user.page.title}">Title</title>
 </head>
 
 <body>
-<h1 data-th-text="#{home.page.title}">Title</h1>
-<p>
-<a href="strategy/list.html">Strategy list</a><br/>
-</p>
+	<h1 data-th-text="#{home.page.title}">Title</h1>
+	<p>
+		<a href="strategy/list.html">Strategy list</a><br/>
+	</p>
+	
+	
+
+ <!-- Include all compiled plugins (below), or include individual files as needed -->
+ <script type="text/css" data-th-src="@{/webjars/bootstrap/3.2.0/js/bootstrap.min.js}"></script>
+ <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+ <script data-th-src="@{/webjars/jquery/2.1.1/jquery.min.js}"></script>
+	
+	<script type="text/javascript">
+        $(document).ready(function() {
+        	
+            $('p').animate({
+                fontSize: '48px'
+            }, "slow");
+        });
+    </script>
 </body>
 </html>
