--- a/src/main/webapp/WEB-INF/views/strategy-delete.html
+++ b/src/main/webapp/WEB-INF/views/strategy-delete.html
@@ -4,42 +4,77 @@
 	
 <head>
     <meta charset="utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />	
+	
 	<title data-th-text="#{strategy.delete.page.title}">Title</title>
+	
+	<!-- Bootstrap -->
+	<link type="text/css" rel="stylesheet" data-th-href="@{/webjars/bootstrap/3.2.0/css/bootstrap.min.css}" />
+	
+	<style>
+	  .no-border-on-me>thead>tr>th,
+	  .no-border-on-me>tbody>tr>th,
+	  .no-border-on-me>tfoot>tr>th,
+	  .no-border-on-me>thead>tr>td,
+	  .no-border-on-me>tbody>tr>td,
+	  .no-border-on-me>tfoot>tr>td
+	  {
+	   border-top-style: none;
+	   border-bottom-style: none;
+	  }
+	 </style>
 </head>
+	
 
 <body>
-<div>
-	<!-- delete strategies -->
-	<table data-th-object="${strategy}">
-		<caption data-th-text="#{strategy.delete.head.title}">Delete title</caption>
-		<tbody>
-			<tr>
-				<td data-th-text="#{strategy.list.id.label}">id label</td>
-				<td><input type="text" data-th-field="*{id}"/></td>
-			</tr>
-			<tr>
-				<td data-th-text="#{strategy.list.type.label}">type label</td>
-				<td><input type="text" data-th-field="*{type}"/></td>
-			</tr>
-			<tr>
-				<td data-th-text="#{strategy.list.name.label}">name label</td>
-				<td><input type="text" data-th-field="*{name}"/></td>
-			</tr>
-			<tr>
-				<td>
-					<a href="#" data-th-href="@{/strategy/delete(id=*{id},phase=delete)}">
-					<button type="button" data-th-text="#{delete.button.label}">delete</button>
-					</a>
-				</td>
-				<td>
-					<a href="#" data-th-href="@{/strategy/delete(id=*{id},phase=cancel)}">
-					<button type="button" data-th-text="#{cancel.button.label}">cancel</button>
-					</a>
-				</td>
-			</tr>
-		</tbody>
-	</table>
+<div class="container-fluid">
+ <div class="row">
+  <div class="main">
+  	<div class="col-sm-3"></div>
+  		<div class="col-sm-6" data-th-object="${strategy}">
+  			<h3 data-th-text="#{strategy.delete.head.title}">Delete Strategy</h3>
+			<!-- delete strategies -->
+			<form class="form-horizontal" >
+				<div class="form-group">
+					<label class="col-sm-4 control-label" data-th-text="#{strategy.list.id.label}">Strategy Id</label>
+					<div class="col-sm-8">
+						<input type="text" class="form-control"  data-th-field="*{id}" disabled="disabled"/>
+					</div>
+				</div>
+				
+				<div class="form-group">
+					<label class="col-sm-4 control-label" data-th-text="#{strategy.list.type.label}">Strategy Type</label>
+					<div class="col-sm-8">
+						<input type="text" class="form-control"  data-th-field="*{type}" disabled="disabled"/>
+					</div>
+				</div>
+				
+				<div class="form-group">
+					<label class="col-sm-4 control-label" data-th-text="#{strategy.list.name.label}">Strategy Name</label>
+					<div class="col-sm-8">
+						<input type="text" class="form-control"  data-th-field="*{name}" disabled="disabled"/>
+					</div>
+				</div> 
+			</form>
+			
+			<div class="form-horizontal">
+				<div class="form-group">
+					<label class="col-sm-4 control-label"></label>
+					<div class="col-sm-8" >
+				        <a href="#" data-th-href="@{/strategy/delete(id=*{id},phase=delete)}">
+				          <button type="button" class="btn btn-primary" data-th-text="#{delete.button.label}">Delete</button></a>
+				                  
+				        <a href="#" data-th-href="@{/strategy/delete(id=*{id},phase=cancel)}">
+				          <button type="button" class="btn btn-default active" data-th-text="#{cancel.button.label}">Cancel</button></a>
+				     </div>
+				</div>
+			</div>
+			 
+		</div> <!-- End col-sm-6 -->
 	
-</div>
+  </div>  <!-- End main -->
+ </div>  <!-- End row  -->
+</div> <!-- End container fluid-->
 </body>
 </html>
