--- a/src/main/webapp/WEB-INF/views/strategy-edit.html
+++ b/src/main/webapp/WEB-INF/views/strategy-edit.html
@@ -4,37 +4,91 @@
 	
 <head>
     <meta charset="utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	
 	<title data-th-text="#{strategy.edit.head.title}">temp heading</title>
+	
+	<!-- Bootstrap -->
+	<link type="text/css" rel="stylesheet" data-th-href="@{/webjars/bootstrap/3.2.0/css/bootstrap.min.css}" />
+	
+	<style>
+	  .no-border-on-me>thead>tr>th,
+	  .no-border-on-me>tbody>tr>th,
+	  .no-border-on-me>tfoot>tr>th,
+	  .no-border-on-me>thead>tr>td,
+	  .no-border-on-me>tbody>tr>td,
+	  .no-border-on-me>tfoot>tr>td
+	  {
+	   border-top-style: none;
+	   border-bottom-style: none;
+	  }
+	 </style>
 </head>
 
 <body>
-<div>
-	<!-- edit strategies -->
-	<form action="#" data-th-action="@{/strategy/edit}" data-th-object="${strategy}" method="post">
-		<table>
-			<caption data-th-text="#{strategy.edit.head.title}">edit title</caption>
-			<tbody>
-				<tr>
-					<td data-th-text="#{strategy.list.type.label}">type label</td>
-					<td><input type="text" hidden="hidden" data-th-field="*{id}"/>
-						<input type="text" data-th-field="*{type}"/></td>
-				</tr>
-				<tr>
-					<td data-th-text="#{strategy.list.name.label}">name label</td>
-					<td><input type="text" data-th-field="*{name}"/></td>
-				</tr>
-				<tr>
-					<td>
-						<button type="submit" name="action" value="save" data-th-text="#{update.button.label}">save</button>
-					</td>
-					<td>
-						<button type="submit" name="action" value="cancel" data-th-text="#{cancel.button.label}">cancel</button>
-					</td>
-				</tr>
-			</tbody>
-		</table>
-	</form>
+<div class="container-fluid">
+  <div class="row">
+   <div class="main">
+   
+   	<div class="col-sm-3"></div> <!-- for space -->
+    <div class="col-sm-6">
+	    <h3 data-th-text="#{strategy.edit.head.title}">Edit Strategy</h3>
+		<!-- edit strategies -->
+		<form  class="form-horizontal" action="#" data-th-action="@{/strategy/edit}" data-th-object="${strategy}" method="post">
+			<table>
+				<tbody>
+				<!-- 
+					<tr>
+						<td data-th-text="#{strategy.list.type.label}">type label</td>
+						<td><input type="text" hidden="hidden" data-th-field="*{id}"/>
+							<input type="text" data-th-field="*{type}"/></td>
+					</tr>
+				 -->
+				 	<div class="form-group">
+				 		<label class="col-sm-4 control-label" data-th-text="#{strategy.list.type.label}">Strategy Type</label>
+				 		<div class="col-sm-8">
+				 			<input type="text" hidden="hidden" data-th-field="*{id}" ></input>
+	        				<input type="text" class="form-control" data-th-field="*{type}" ></input>
+				 		</div>
+				 	</div>
+				 	<!--  
+					<tr>
+						<td data-th-text="#{strategy.list.name.label}">name label</td>
+						<td><input type="text" data-th-field="*{name}"/></td>
+					</tr>
+					-->
+					<div class="form-group">
+						<label class="col-sm-4 control-label" data-th-text="#{strategy.list.name.label}">Strategy Name</label>
+						<div class="col-sm-8">
+							<input type="text" class="form-control" data-th-field="*{name}" />
+						</div>
+					</div>
+					<!--  
+					<tr>
+						<td>
+							<button type="submit" name="action" value="save" data-th-text="#{update.button.label}">save</button>
+						</td>
+						<td>
+							<button type="submit" name="action" value="cancel" data-th-text="#{cancel.button.label}">cancel</button>
+						</td>
+					</tr>
+					-->
+					<div class="form-group">
+						<div class="col-sm-offset-4 col-sm-8">
+							<button type="submit" class="btn btn-primary" name="action" value="save" data-th-text="#{update.button.label}">Save</button>
+							<button type="submit" class="btn btn-default active" name="action" value="cancel" data-th-text="#{cancel.button.label}">Cancel</button>
+						</div>
+					</div>
+				</tbody>
+			</table>
+		</form>
+	</div> <!-- End col-sm-6 -->
 	
-</div>
+	<div class="col-sm-3"></div> <!-- for space -->
+	
+  </div>  <!-- End main -->
+ </div>  <!-- End row  -->
+</div> <!-- End container fluid-->
 </body>
 </html>
