--- a/src/main/webapp/WEB-INF/views/strategy-list.html
+++ b/src/main/webapp/WEB-INF/views/strategy-list.html
@@ -4,62 +4,92 @@
 	
 <head>
     <meta charset="utf-8" />
+ 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+ 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+
 	<title data-th-text="#{strategy.list.page.title}">Title</title>
+	
+	<!-- Bootstrap -->
+	<link type="text/css" rel="stylesheet" data-th-href="@{/webjars/bootstrap/3.2.0/css/bootstrap.min.css}" />
+	
+	<!-- remove border of table -->
+	<style>
+	  .no-border-on-me>thead>tr>th,
+	  .no-border-on-me>tbody>tr>th,
+	  .no-border-on-me>tfoot>tr>th,
+	  .no-border-on-me>thead>tr>td,
+	  .no-border-on-me>tbody>tr>td,
+	  .no-border-on-me>tfoot>tr>td
+	  {
+	   border-top-style: none;
+	   border-bottom-style: none;
+	  }
+	</style>
 </head>
 
 <body>
-<div>
+<div class="container-fluid">
+  <div class="row">
+   <div class="main">
+	<h3 data-th-text="#{strategy.list.table.title}">Configured Strategies</h3>
 	<!-- list strategies -->
-	<table>
-		<caption data-th-text="#{strategy.list.table.title}">Temp table title</caption>
-		<thead>
-			<tr>
-				<th scope="col" data-th-text="#{strategy.list.id.label}">Temp ID</th>
-				<th scope="col" data-th-text="#{strategy.list.type.label}">Temp Type</th>
-				<th scope="col" data-th-text="#{strategy.list.name.label}">Temp Name</th>
-				<th scope="col" data-th-text="#{strategy.list.actions.label}">Temp Action</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr data-th-each="strategy : ${strategies}">
-				<td data-th-text="${strategy.id}">1</td>
-				<td data-th-text="${strategy.type}">Iron Butterfly</td>
-				<td data-th-text="${strategy.name}">Triple Butter</td>
-				<td>
-					<a href="#" data-th-href="@{/strategy/edit(id=${strategy.id})}">edit</a> 
-					| 
-					<a href="#" data-th-href="@{/strategy/delete(id=${strategy.id},phase=stage)}">delete</a>
-				</td>
-			</tr>
-		</tbody>
-	</table>
-	
-	<!-- add strategies -->
-	<form action="#" data-th-action="@{/strategy/add}" data-th-object="${strategy}" method="post">
-		<table>
-			<caption data-th-text="#{strategy.list.add.title}">Add title</caption>
+	 <div class="table responsive">
+		<table class="table table-striped table-bordered table-hover">
 			<thead>
 				<tr>
-					<th data-th-text="#{strategy.list.type.label}">type label</th>
-					<th data-th-text="#{strategy.list.name.label}">name label</th>
+					<th class="col-sm-1" data-th-text="#{strategy.list.id.label}">Temp ID</th>
+					<th class="col-sm-4" data-th-text="#{strategy.list.type.label}">Temp Type</th>
+					<th class="col-sm-4" data-th-text="#{strategy.list.name.label}">Temp Name</th>
+					<th class="col-sm-2"  data-th-text="#{strategy.list.actions.label}">Temp Action</th>
 				</tr>
 			</thead>
 			<tbody>
-				<tr>
-					<td><input type="text" hidden="hidden" data-th-field="*{id}"/>
-						<input type="text" data-th-field="*{type}"/></td>
-					<td><input type="text" data-th-field="*{name}"/></td>
-				</tr>
-				<tr>
-					<td>
-						<button type="submit" data-th-text="#{add.button.label}">Action</button>
+				<tr data-th-each="strategy : ${strategies}">
+					<td data-th-text="${strategy.id}">1</td>
+					<td data-th-text="${strategy.type}">Iron Butterfly</td>
+					<td data-th-text="${strategy.name}">Triple Butter</td>
+					<td style="text-align:center;"> 
+						<a href="#" data-th-href="@{/strategy/edit(id=${strategy.id})}">
+							<button type="button" class="btn btn-default btn-xs">
+					          <span class="glyphicon glyphicon-pencil"></span>&nbsp;&nbsp;Edit
+					         </button></a> &nbsp;
+						
+						<a href="#" data-th-href="@{/strategy/delete(id=${strategy.id},phase=stage)}">
+							<button type="button" class="btn btn-default btn-xs">
+          						<span class="glyphicon glyphicon-trash"></span>&nbsp;&nbsp;Delete
+							</button></a>
 					</td>
-					<td></td>
 				</tr>
 			</tbody>
 		</table>
+	 </div><!-- End table responsive -->
+	
+	<!-- add strategies -->
+	<form class="form" action="#" data-th-action="@{/strategy/add}" data-th-object="${strategy}" method="post">
+		<div class="table responsive">
+			<table class="table no-border-on-me">
+				<thead>
+					<tr>
+						<th class="col-sm-1"></th>
+						<th class="col-sm-4" data-th-text="#{strategy.list.type.label}">type label</th>
+						<th class="col-sm-4" data-th-text="#{strategy.list.name.label}">name label</th>
+						<th class="col-sm-2" data-th-text="#{strategy.list.actions.label}">Action</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td><input type="text" hidden="hidden" data-th-field="*{id}"/></td>
+						<td><input class="form-control" type="text" data-th-field="*{type}" placeholder="Type"/></td>
+						<td><input class="form-control" type="text" data-th-field="*{name}" placeholder="Name"/></td>
+						<td><button type="submit" class="btn btn-primary" data-th-text="#{add.strategy.button.label}">Add strategy</button></td>
+					</tr>
+				</tbody>
+			</table>
+		</div> <!-- End table responsive -->
 	</form>
 	
-</div>
+  </div>  <!-- End main -->
+ </div>  <!-- End row -->
+</div> <!-- End container -->
 </body>
 </html>
