--- a/src/main/webapp/WEB-INF/views/strategy-delete.html
+++ b/src/main/webapp/WEB-INF/views/strategy-delete.html
@@ -63,10 +63,10 @@
 					<label class="col-sm-4 control-label"></label>
 					<div class="col-sm-8" >
 				        <a href="#" data-th-href="@{/strategy/delete(id=*{id},phase=delete)}">
-				          <button type="button" class="btn btn-primary" data-th-text="#{delete.button.label}">Delete</button></a>
+				          <button type="button" class="btn btn-primary" data-th-text="#{button.label.delete}">Delete</button></a>
 				                  
 				        <a href="#" data-th-href="@{/strategy/delete(id=*{id},phase=cancel)}">
-				          <button type="button" class="btn btn-default active" data-th-text="#{cancel.button.label}">Cancel</button></a>
+				          <button type="button" class="btn btn-default active" data-th-text="#{button.label.cancel}">Cancel</button></a>
 				     </div>
 				</div>
 			</div>
