--- a/src/main/webapp/WEB-INF/views/home.html
+++ b/src/main/webapp/WEB-INF/views/home.html
@@ -14,11 +14,11 @@
 	
 	
 	
-	<title th:text="#{user.page.title}">Title</title>
+	<title th:text="#{admin.page.title}">Title</title>
 </head>
 
 <body>
-	<h1 data-th-text="#{home.page.title}">Title</h1>
+	<h1 data-th-text="#{admin.page.title}">Title</h1>
 	<p>
 		<a href="strategy/list.html">Strategy list</a><br/>
 	</p>
