--- a/src/main/webapp/WEB-INF/views/strategy-edit.html
+++ b/src/main/webapp/WEB-INF/views/strategy-edit.html
@@ -9,8 +9,10 @@
 	
 	<title data-th-text="#{strategy.edit.head.title}">temp heading</title>
 	
-	<!-- Bootstrap -->
-	<link type="text/css" rel="stylesheet" data-th-href="@{/webjars/bootstrap/3.2.0/css/bootstrap.min.css}" />
+	<link type="text/css" rel="stylesheet" data-th-href="@{/resources/css/bootstrap.min.css}" />
+	<link type="text/css" rel="stylesheet" data-th-href="@{/resources/css/plugins/metisMenu/metisMenu.min.css}" />
+	<link type="text/css" rel="stylesheet" data-th-href="@{/resources/font-awesome/css/font-awesome.css}" />
+	<link type="text/css" rel="stylesheet" data-th-href="@{/resources/css/sb-admin-2.css}" />
 	
 	<style>
 	  .no-border-on-me>thead>tr>th,
@@ -27,9 +29,21 @@
 </head>
 
 <body>
-<div class="container-fluid">
-  <div class="row">
-   <div class="main">
+<!-- format to suit fragmet -->
+
+<div id="wrapper">                <!-- /#wrapper -->
+ 
+<div data-th-replace="fragments/sb-admin :: top-nav"></div>
+     
+<div data-th-replace="fragments/sb-admin :: vertical-nav"></div>
+ 
+ <div id="page-wrapper">
+   <div class="row">
+      <div class="col-lg-12">
+<!--/ format to suit fragmet -->      
+      
+      
+      
    
    	<div class="col-sm-3"></div> <!-- for space -->
     <div class="col-sm-6">
@@ -71,8 +85,18 @@
 	
 	<div class="col-sm-3"></div> <!-- for space -->
 	
-  </div>  <!-- End main -->
- </div>  <!-- End row  -->
-</div> <!-- End container fluid-->
+	
+	
+<!-- format to suit fragmet -->	
+			</div>  <!-- /.col-lg-12 -->   
+        </div>      <!-- /.row -->   
+    </div>      <!-- page wrapper -->
+</div>              <!-- /#wrapper -->
+<!--/ format to suit fragmet -->
+
+ <script type="text/javascript" data-th-src="@{/resources/js/jquery-1.11.0.js}" ></script>
+ <script type="text/javascript" data-th-src="@{/resources/js/bootstrap.min.js}"></script>
+ <script type="text/javascript" data-th-src="@{/resources/js/plugins/metisMenu/metisMenu.min.js}"></script> 	
+ <script type="text/javascript" data-th-src="@{/resources/js/sb-admin-2.js}"></script>
 </body>
 </html>
