--- a/src/main/webapp/WEB-INF/views/strategy-list.html
+++ b/src/main/webapp/WEB-INF/views/strategy-list.html
@@ -9,8 +9,10 @@
 
 	<title data-th-text="#{strategy.list.page.title}">Title</title>
 	
-	<!-- Bootstrap -->
-	<link type="text/css" rel="stylesheet" data-th-href="@{/webjars/bootstrap/3.2.0/css/bootstrap.min.css}" />
+	<link type="text/css" rel="stylesheet" data-th-href="@{/resources/css/bootstrap.min.css}" />
+	<link type="text/css" rel="stylesheet" data-th-href="@{/resources/css/plugins/metisMenu/metisMenu.min.css}" />
+	<link type="text/css" rel="stylesheet" data-th-href="@{/resources/font-awesome/css/font-awesome.css}" />
+	<link type="text/css" rel="stylesheet" data-th-href="@{/resources/css/sb-admin-2.css}" />
 	
 	<!-- remove border of table -->
 	<style>
@@ -28,9 +30,18 @@
 </head>
 
 <body>
-<div class="container-fluid">
-  <div class="row">
-   <div class="main">
+<!-- format to suit fragmet -->	
+<div id="wrapper">                <!-- /#wrapper -->
+ 
+<div data-th-replace="fragments/sb-admin :: top-nav"></div>
+     
+<div data-th-replace="fragments/sb-admin :: vertical-nav"></div>
+ 
+ <div id="page-wrapper">
+   <div class="row">
+      <div class="col-lg-12">
+<!--/ format to suit fragmet -->	         
+            
 	<h3 data-th-text="#{strategy.list.table.title}">Configured Strategies</h3>
 	<!-- list strategies -->
 	 <div class="table responsive">
@@ -97,8 +108,15 @@
 		</div> <!-- End table responsive -->
 	</form>
 	
-  </div>  <!-- End main -->
- </div>  <!-- End row -->
-</div> <!-- End container -->
+<!-- format to suit fragmet -->	
+			</div>  <!-- /.col-lg-12 -->   
+        </div>      <!-- /.row -->   
+    </div>      <!-- page wrapper -->
+</div>              <!-- /#wrapper -->
+<!--/ format to suit fragmet -->	
+ <script type="text/javascript" data-th-src="@{/resources/js/jquery-1.11.0.js}" ></script>
+ <script type="text/javascript" data-th-src="@{/resources/js/bootstrap.min.js}"></script>
+ <script type="text/javascript" data-th-src="@{/resources/js/plugins/metisMenu/metisMenu.min.js}"></script> 	
+ <script type="text/javascript" data-th-src="@{/resources/js/sb-admin-2.js}"></script>
 </body>
 </html>
