--- a/src/main/webapp/WEB-INF/views/strategy-list.html
+++ b/src/main/webapp/WEB-INF/views/strategy-list.html
@@ -35,7 +35,7 @@
  
 <div data-th-replace="fragments/sb-admin :: top-nav"></div>
      
-<div data-th-replace="fragments/sb-admin :: vertical-nav"></div>
+<div data-th-replace="fragments/sb-admin :: vert-nav"></div>
  
  <div id="page-wrapper">
    <div class="row">
